# image-file-name-fixer

./: .gitignore  Cargo.toml  LICENSE.md  README.md
AUR/: PKGBUILD
manpage/: image-file-name-fixer.1.md
src/: arg_parser.rs  check_path.rs  config.rs  image_data.rs  main.rs  processor.rs
test-images/: WcS3.xcf
test-images/first/: foo.txt
