[package]
name = "image-file-name-fixer"
version = "0.0.1-alpha"
description = "Normalizes image file names to standard naming scheme."
authors = ["Jeremy M. Reed <reeje76@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
image = { version = "0.24.6", features = ["libwebp"] }
