[package]
name = "image-file-name-fixer"
version = "0.0.4"
description = "Normalizes image file names to standard naming scheme."
authors = ["Jeremy M. Reed <reeje76@gmail.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
shadow-rs = "0.21.0"

[dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
image = { version = "0.24.6", features = ["libwebp"] }
shadow-rs = "0.21.0"
lazy_static = "1.4.0"
regex = "1.8.1"
sha256 = "1.1.3"
colored = "2.0.0"
